force-app/main/default/objects/Assay__c/Assay__c.object-meta.xml
<CustomObject>
    <label>Assay</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Assay Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>