force-app/main/default/objects/Assay__c/fields/Assay__c.field-meta.xml
<CustomField>
    <fullName>Assay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assay Completed</label>
    <type>Checkbox</type>
</CustomField>