force-app/main/default/objects/Assay__c/fields/Assay_Type__c.field-meta.xml
<CustomField>
    <fullName>Assay_Type__c</fullName>
    <label>Assay Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMES</fullName>
            </value>
            <value>
                <fullName>MN</fullName>
            </value>
            <value>
                <fullName>NRU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>